--- a/.github/workflows/web.yaml
+++ b/.github/workflows/web.yaml
@@ -4,10 +4,16 @@ on: [push]
 
 jobs:
   build_web:
-    runs-on: ubuntu-20.04
+    runs-on: ${{ matrix.os }}
+
+    strategy:
+        matrix:
+            os: [ubuntu-20.04, macos-11, windows-2022]
+            node-version: [16]
+    
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
-          node-version: '16'
+          node-version: ${{ node-version }}
       - run: cd web && npm install && npm run build    
