--- a/.github/workflows/zinc.yaml
+++ b/.github/workflows/zinc.yaml
@@ -18,14 +18,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - run: cd web && npm install && npm run build
 
-      - name: Cache web/dist folder
-        uses: actions/cache@v2
+      - uses: actions/upload-artifact@v3
         with:
+          name: web-${{ matrix.os }}-${{ env.GITHUB_SHA }}
           path: web/dist
-          key: ${{ runner.os }}-${{ env.GITHUB_SHA }}-web-dist
-  # build_zinc:
-  #   runs-on: ${{ matrix.os }}
-
-  #   strategy:
-  #       matrix:
-  #           os: [ubuntu-20.04, macos-11, windows-2022]
