--- a/.github/workflows/web.yaml
+++ b/.github/workflows/web.yaml
@@ -16,5 +16,5 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
-      - run: cd web && npm install && npm run build
+      - run: cd web && npm install && npm run build && echo "Test works"
       
