--- a/.github/workflows/web.yaml
+++ b/.github/workflows/web.yaml
@@ -5,17 +5,14 @@ on:
 
 jobs:
   build_web:
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-20.04
 
-    strategy:
-        matrix:
-            os: [ubuntu-20.04, macos-11, windows-2022]
-            node-version: [16]
+
     
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: "16"
       - run: cd web && npm install && npm run build && echo "Test works"
       
