--- a/.github/workflows/web.yaml
+++ b/.github/workflows/web.yaml
@@ -17,3 +17,9 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - run: cd web && npm install && npm run build
+      
+      - uses: actions/upload-artifact@v2
+        with:
+          name: web
+          path: web/build
+          target-directory: build
